--- a/package.json
+++ b/package.json
@@ -3,24 +3,57 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "build:icons": "icons build -i ./src/assets/icons -o ./src/components/ui/icons -s ./public/icons --optimize",
+    "bundle-analyze": "BUNDLE_ANALYZE=true pnpm run build",
+    "ci": "pnpm run --parallel --aggregate-output \"/^(lint|format|type-check).*/\"",
+    "clean": "rm -rf ./dist",
+    "dev": "next dev",
+    "format": "prettier \"**/*\" --write --ignore-unknown --log-level silent",
+    "generate-pages-types": "next-static-paths --pages-dir ./src --output . && :",
+    "knip": "knip",
+    "lint": "eslint --fix .",
+    "prepare": "husky",
     "start": "next start",
-    "lint": "next lint"
+    "sync-env": "sync-dotenv --env .env.local",
+    "type-check": "tsc --pretty --noEmit"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md}": "eslint --cache --fix",
+    "*.{ts,tsx,css,html,svg,md,json,js}": "prettier --write",
+    "src/app/**/page.tsx": "pnpm run generate-pages-types"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@next/bundle-analyzer": "^14.2.5",
+    "@nirtamir2/next-static-paths": "^0.6.0",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "clsx": "^2.1.1",
+    "jiti": "^1.21.6",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-85acf2d195-20240711",
+    "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
+    "@eslint-react/eslint-plugin": "^1.5.16",
+    "@nirtamir2/eslint-config": "^0.0.2-beta.11",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@tsconfig/strictest": "^2.0.5",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.6.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-plugin-format": "^0.1.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "postcss": "^8.4.39",
+    "prettier-plugin-packagejson": "^2.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5.5.3"
   }
 }
