--- a/package.json
+++ b/package.json
@@ -18,11 +18,6 @@
     "sync-env": "sync-dotenv --env .env.local",
     "type-check": "tsc --pretty --noEmit"
   },
-  "lint-staged": {
-    "*.{ts,tsx,md}": "eslint --cache --fix",
-    "*.{ts,tsx,css,html,svg,md,json,js}": "prettier --write",
-    "src/app/**/page.tsx": "pnpm run generate-pages-types"
-  },
   "dependencies": {
     "@ai-sdk/google": "^0.0.27",
     "@next/bundle-analyzer": "^14.2.5",
@@ -30,6 +25,7 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^3.2.22",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.6",
     "jiti": "^1.21.6",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-85acf2d195-20240711",
@@ -38,7 +34,7 @@
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.5.16",
-    "@nirtamir2/eslint-config": "^0.0.2-beta.11",
+    "@nirtamir2/eslint-config": "0.0.2-beta.12",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^20.14.10",
@@ -57,5 +53,10 @@
     "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,md}": "eslint --cache --fix",
+    "*.{ts,tsx,css,html,svg,md,json,js}": "prettier --write",
+    "src/app/**/page.tsx": "pnpm run generate-pages-types"
   }
 }
