--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "sync-env": "sync-dotenv --env .env.local",
     "type-check": "tsc --pretty --noEmit"
   },
+  "lint-staged": {
+    "*.{ts,tsx,md}": "eslint --cache --fix",
+    "*.{ts,tsx,css,html,svg,md,json,js}": "prettier --write",
+    "src/app/**/page.tsx": "pnpm run generate-pages-types"
+  },
   "dependencies": {
     "@ai-sdk/google": "^0.0.27",
     "@next/bundle-analyzer": "^14.2.5",
@@ -33,18 +38,18 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.5.16",
-    "@nirtamir2/eslint-config": "0.0.2-beta.12",
+    "@eslint-react/eslint-plugin": "^1.5.25",
+    "@nirtamir2/eslint-config": "^0.0.2-beta.12",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.6.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.7.0",
+    "eslint-config-next": "^15.0.0-rc.0",
     "eslint-plugin-format": "^0.1.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
+    "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
+    "eslint-plugin-react-refresh": "^0.4.8",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
@@ -53,10 +58,5 @@
     "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,md}": "eslint --cache --fix",
-    "*.{ts,tsx,css,html,svg,md,json,js}": "prettier --write",
-    "src/app/**/page.tsx": "pnpm run generate-pages-types"
   }
 }
