--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-85acf2d195-20240711",
     "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
     "eslint-plugin-react-refresh": "^0.4.8",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8.4.39",
