add schemas with drizzle

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ci": "pnpm run --parallel --aggregate-output \"/^(lint|format|type-check).*/\"",
     "clean": "rm -rf ./dist",
     "dev": "next dev",
+    "drizzle-generate": "drizzle-kit generate",
+    "drizzle-migrate": "drizzle-kit migrate",
     "format": "prettier \"**/*\" --write --ignore-unknown --log-level silent",
     "generate-pages-types": "next-static-paths --pages-dir ./src --output . && :",
     "knip": "knip",
@@ -25,11 +27,13 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.27",
+    "@neondatabase/serverless": "^0.9.4",
     "@next/bundle-analyzer": "^14.2.5",
     "@nirtamir2/next-static-paths": "^0.6.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "ai": "^3.2.22",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.32.1",
     "embla-carousel-react": "^8.1.6",
     "jiti": "^1.21.6",
     "next": "15.0.0-rc.0",
@@ -48,6 +52,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^9.7.0",
     "eslint-config-next": "^15.0.0-rc.0",
     "eslint-plugin-format": "^0.1.2",
