--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nuqs": "^1.17.5",
     "react": "19.0.0-rc-85acf2d195-20240711",
     "react-dom": "19.0.0-rc-85acf2d195-20240711",
+    "server-only": "^0.0.1",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
