--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ai": "^3.2.22",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
+    "firebase": "^10.12.4",
     "jiti": "^1.21.6",
     "next": "15.0.0-rc.0",
     "nuqs": "^1.17.5",
