--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.4",
     "jiti": "^1.21.6",
+    "lottie-react": "^2.4.0",
     "next": "15.0.0-rc.0",
     "nuqs": "^1.17.5",
     "react": "19.0.0-rc-85acf2d195-20240711",
