--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@nirtamir2/next-static-paths": "^0.6.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.2.22",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
