--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "postcss": "^8.4.39",
     "prettier-plugin-packagejson": "^2.5.0",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "svg-icons-cli": "^0.0.8",
     "sync-dotenv": "^2.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3"
