--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
     "src/app/**/page.tsx": "pnpm run generate-pages-types"
   },
   "dependencies": {
-    "@ai-sdk/google": "^0.0.27",
+    "@ai-sdk/google": "^0.0.30",
     "@next/bundle-analyzer": "^14.2.5",
     "@nirtamir2/next-static-paths": "^0.6.0",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@vercel/analytics": "^1.3.1",
-    "ai": "^3.2.22",
+    "ai": "^3.3.0",
     "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.1.6",
-    "firebase": "^10.12.4",
+    "embla-carousel-react": "^8.1.8",
+    "firebase": "^10.12.5",
     "jiti": "^1.21.6",
     "lottie-react": "^2.4.0",
     "next": "15.0.0-rc.0",
-    "nuqs": "^1.17.5",
+    "nuqs": "^1.17.6",
     "react": "19.0.0-rc-85acf2d195-20240711",
     "react-dom": "19.0.0-rc-85acf2d195-20240711",
     "server-only": "^0.0.1",
@@ -44,28 +44,28 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.5.25",
-    "@nirtamir2/eslint-config": "^0.0.2-beta.12",
+    "@eslint-react/eslint-plugin": "^1.8.2",
+    "@nirtamir2/eslint-config": "0.0.2-beta.13",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9.7.0",
+    "eslint": "^9.8.0",
     "eslint-config-next": "^15.0.0-rc.0",
     "eslint-plugin-format": "^0.1.2",
     "eslint-plugin-react-hooks": "5.1.0-beta-26f2496093-20240514",
-    "eslint-plugin-react-refresh": "^0.4.8",
-    "eslint-plugin-sort-destructure-keys-typescript": "^0.0.1",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-sort-destructure-keys-typescript": "^0.0.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.39",
-    "prettier-plugin-packagejson": "^2.5.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
+    "postcss": "^8.4.40",
+    "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "svg-icons-cli": "^0.0.8",
     "sync-dotenv": "^2.7.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3"
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
