--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bundle-analyze": "BUNDLE_ANALYZE=true pnpm run build",
     "ci": "pnpm run --parallel --aggregate-output \"/^(lint|format|type-check).*/\"",
     "clean": "rm -rf ./dist",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "format": "prettier \"**/*\" --write --ignore-unknown --log-level silent",
     "generate-pages-types": "next-static-paths --pages-dir ./src --output . && :",
     "knip": "knip",
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^14.2.5",
     "@nirtamir2/next-static-paths": "^0.6.0",
     "@t3-oss/env-nextjs": "^0.11.0",
+    "@tanstack/react-query": "^5.51.21",
     "@vercel/analytics": "^1.3.1",
     "ai": "^3.3.0",
     "clsx": "^2.1.1",
@@ -46,6 +47,8 @@
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.8.2",
     "@nirtamir2/eslint-config": "0.0.2-beta.13",
+    "@tanstack/eslint-plugin-query": "^5.51.15",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/node": "^22.1.0",
