--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ai-sdk/google": "^0.0.30",
     "@next/bundle-analyzer": "^14.2.5",
     "@nirtamir2/next-static-paths": "^0.6.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tanstack/react-query": "^5.51.21",
     "@vercel/analytics": "^1.3.1",
